tweaks (#65)
* micro test tweak

* assert objects tweak

* assert objects tweak

* get(0) -> getFirst()

* run config tweak