@@ -5,13 +5,13 @@ import java.util.List;
 import com.bottega.promoter.concert.*;
 import com.bottega.promoter.concert.domain.Concert;
 import com.bottega.promoter.concert.fixtures.ConcertLogicTestBase;
-import com.bottega.promoter.concert.fixtures.asserts.PriceAssert;
-import com.bottega.sharedlib.fixtures.ErrorAssert;
 import com.bottega.sharedlib.vo.Money;
 import com.bottega.sharedlib.vo.error.ErrorResult;
 import io.vavr.control.Either;
 import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.Test;
+import static com.bottega.promoter.concert.fixtures.asserts.PriceAssert.assertThatPrice;
+import static com.bottega.sharedlib.fixtures.ErrorAssert.assertThatError;
 import static com.bottega.sharedlib.vo.error.ErrorType.NOT_FOUND;
 import static com.bottega.sharedlib.vo.error.GenericErrorCode.not_found;
 import static org.assertj.vavr.api.VavrAssertions.assertThat;
@@ -30,7 +30,7 @@ class ConcertService_discountConcert_compTest extends ConcertLogicTestBase {
         //then
         assertThat(result).hasRightValueSatisfying(prices -> {
             Assertions.assertThat(prices).hasSize(1);
-            PriceAssert.assertThatPrice(prices.get(0))
+            assertThatPrice(prices.getFirst())
                     .equalTo(new Money(90_00))
                     .hasFactors(new PriceFactor("PERCENTAGE", 10, null));
         });
@@ -44,7 +44,7 @@ class ConcertService_discountConcert_compTest extends ConcertLogicTestBase {
 
         //then
         assertThat(result).hasLeftValueSatisfying(error ->
-                ErrorAssert.assertThatError(error)
+                assertThatError(error)
                         .hasType(NOT_FOUND)
                         .hasCode(not_found)
                         .hasDescription("Concert with given ID does not exist. ID: not-existing"));
